test/1.2/errors/T_ENOPTR.dml
/*
  © 2021-2022 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;
device test;

/// WARNING WEXPERIMENTAL
trait tr {
    method m();
}

method init() {
    /// ERROR ENOPTR
    *1;
    /// ERROR ENOPTR
    1->foo;
    local tr t;
    /// ERROR ENOPTR
    t->m;
}
